src/test/ui/async-await/no-move-across-await-tuple.stderr
error[E0382]: use of moved value: `x.1`
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/no-move-across-await-tuple.rs:11:5
=======
  --> $DIR/no-move-across-await-tuple.rs:9:5
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     drop(x.1);
   |          --- value moved here
LL |     nothing().await;
LL |     x.1
   |     ^^^ value used here after move
   |
   = note: move occurs because `x.1` has type `std::vec::Vec<usize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
